--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <!-- Navbar -->
     <nav>
-        <h1>BEATRICE WONG</h1>
+        <h1>JANE DOE</h1>
         <ul class="navigation">
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -54,8 +54,6 @@
     <!-- Contact section -->
 
     <!-- Social accounts - Fixed to the right -->
-
-    <!-- Scroll to top -->
 
     <!-- Footer section -->
 
