--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <!-- <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
 
     <!--CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
     <!-- Favicons -->
-    <link
+    <!-- <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/icons/apple-touch-icon.png"
@@ -19,13 +19,13 @@
       type="image/png"
       sizes="32x32"
       href="assets/icons/favicon-32x32.png"
-    />
+    /> -->
 
     <!-- Animate CSS CDN -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    /> -->
     <title>Beatrice Wong | Engineer</title>
   </head>
 
@@ -50,10 +50,6 @@
     <!-- Skills section -->
 
     <!-- Projects section -->
-
-    <!-- Contact section -->
-
-    <!-- Social accounts - Fixed to the right -->
 
     <!-- Footer section -->
 
