--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
   </head>
 
   <body> 
+    <!-- Nav Bar -->
+    <nav>
+        <h1>BEATRICE WONG</h1>
+        <ul class="navigation">
+          <li><a href="#about" class="nav-link">About</a></li>
+          <li><a href="#skills" class="nav-link">Skills</a></li>
+          <li><a href="#projects" class="nav-link">Projects</a></li>
+        </ul>
+        <button class="burger-menu" id="burger-menu">
+          <ion-icon class="bars" name="menu-outline"></ion-icon>
+          <!-- <ion-icon class="times" name="close-outline"></ion-icon> -->
+        </button>
+      </nav>
+
       <!-- Website scripts -->
       <script src="assets/js/app.js"></script>
     
