Edit project details

--- a/index.html
+++ b/index.html
@@ -143,9 +143,8 @@
           />
           <h3 class="project-title">Cooking & Baking Recipes</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            During my free time, I love exploring new recipes. I keep recipes I've tried and tweaked to my family's tastebuds
+            and keep them documented for easy access in the future. 
           </p>
           <a href="#" target="_blank" class="project-link">Check it Out</a>
         </div>
@@ -158,9 +157,9 @@
           />
           <h3 class="project-title">Home Inventory</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            A passion of mine is being organised, especially at home.
+            Created an application to help me keep track of what I have in my pantry to help me with 
+            being more productive during errand runs! (Nothing worse than starting off the day without a cuppa!) 
           </p>
           <a href="#" target="_blank" class="project-link">Check it Out</a>
         </div>
@@ -173,9 +172,8 @@
           />
           <h3 class="project-title">Travel Planning Website</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            Who doesn't love travelling? As a planner, I created this application to make my
+            my life that much easier whilst planning my next getaway! 
           </p>
           <a href="#" target="_blank" class="project-link">Check it Out</a>
         </div>
@@ -211,7 +209,7 @@
       <p class="copy">&copy; Copyright 2023</p>
       <p class="copy">
           by
-        <a href="https://twitter.com/koladechris" target="_blank"
+        <a href="https://www.linkedin.com/in/beatricewongsg/" target="_blank"
           >Beatrice Wong</a
         >
       </p>
